--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -20,11 +20,11 @@ jobs:
       - name: Get version number
         run: |
           TAG_VERSION=$(echo ${{ github.ref }} | sed 's:refs/tags/\(v.*\):\1:')
-          echo "::set-env name=TAG_VERSION::${TAG_VERSION}"
+          echo "TAG_VERSION=${TAG_VERSION}" >> $GITHUB_ENV
       - name: Get release asset filename
         run: |
           RELEASE_ASSET_FILENAME=$(echo ${GITHUB_REPOSITORY} | sed 's:/:-:g')-${TAG_VERSION}.zip
-          echo "::set-env name=RELEASE_ASSET_FILENAME::${RELEASE_ASSET_FILENAME}"
+          echo "RELEASE_ASSET_FILENAME=${RELEASE_ASSET_FILENAME}" >> $GITHUB_ENV
       - name: Zip theme for release asset
         run: |
           cd theme
